[gd_scene load_steps=6 format=3 uid="uid://crbeo7i0ye5d5"]

[ext_resource type="Texture2D" uid="uid://dffccyrwgiylh" path="res://assets/bg/bg_whiteCheckerboard.png" id="1_2i1jo"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_js83e"]
[ext_resource type="PackedScene" uid="uid://ds0iritq87es6" path="res://scenes/player.tscn" id="2_auqqf"]
[ext_resource type="PackedScene" uid="uid://bwb561j75mah7" path="res://scenes/hud.tscn" id="4_2btlh"]
[ext_resource type="PackedScene" uid="uid://cc4mrtovbxr02" path="res://scenes/enemies/normal_enemy.tscn" id="5_tx5tr"]

[node name="Game" type="Node2D"]
script = ExtResource("1_js83e")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(-1920, -1080)
texture = ExtResource("1_2i1jo")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 5760, 3240)

[node name="Player" parent="." instance=ExtResource("2_auqqf")]
position = Vector2(960, 540)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.9, 0.9)
limit_left = -1920
limit_top = -1080
limit_right = 3840
limit_bottom = 2160
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.5
drag_top_margin = 0.5
drag_right_margin = 0.5
drag_bottom_margin = 0.5

[node name="SurvivalTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="HUD" parent="." instance=ExtResource("4_2btlh")]

[node name="NormalEnemy" parent="." instance=ExtResource("5_tx5tr")]

[connection signal="player_dead" from="Player" to="." method="_on_player_dead"]
[connection signal="timeout" from="SurvivalTimer" to="." method="_on_survival_timer_timeout"]
